fix: Reword intro

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <p class="info shadow">
             Unfortunately, I've been too busy with school, work, and/or play to
             make this website any cooler than it already is. Hopefully that will
-            change soon. However, in the meantime you can check out my
+            change soon. In the meantime you can check out my
             <strong class="media-link"
               ><a href="https://github.com/samgomena">github</a></strong
             >
