fix: Remove link on name; get rid of webgl check for now cuz it no worky

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
         <p class="top">
           <a href="/">Hey, I'm</a>
         </p>
-        <p class="bottom">
-          <a href="/">Sam.</a>
-        </p>
+        <p class="bottom">Sam.</p>
       </div>
       <div>
         <div style="display: flex; justify-content: center">
